# Prims-and-Kruskals-Minimum-Spanning-Tree

./: .gitignore  CMakeLists.txt  Data_Analysis.txt  README.md
include/: adjacency_list.hpp  disjointSet.hpp  edge.hpp  graph.hpp
src/: main.cpp
